[package]
name = "bsp-loader-gl"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
glium = "0.30"
memmap = "0.7"
nalgebra-glm = "0.15"
nom = "7"
png = "0.17"
rand = "0.8"
recursive-iter = { path = "../recursive-iter" }
try-insert-ext = "0.1"
zip = "0.5"
