[workspace]
members = [
    "bitint",
    "bitint-macros",
    "fully-occupied",
    "gx",
    "inception-render-common",
    "mvbitfield",
    "mvbitfield-macros",
    "no-std-ftp",
    "no-std-io",
    "recursive-iter",
    "relocation",
    "source-reader",
    "texture-atlas",
    "texture-format",
]
