[workspace]
members = [
    "bitint",
    "bitint-macros",
    "bitint-test-checked",
    "bitint-test-unchecked",
    "fully-occupied",
    "gx",
    "inception-render-common",
    "mvbitfield",
    "mvbitfield-macros",
    "no-std-ftp",
    "no-std-io",
    "recursive-iter",
    "relocation",
    "source-reader",
    "texture-atlas",
    "texture-format",
]

[profile.test-unchecked]
inherits = "test"
overflow-checks = false
