[package]
name = "apploader"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "apploader"
test = false

[dependencies]
aligned = "0.4"
bytemuck = { version = "1", features = ["derive"] }
panic-never = "0.1"
