[package]
name = "bsp-loader-gx"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bsp-loader-gx"
test = false

[features]
default = ["gamecube"]
gamecube = ["ogc-sys/gamecube"]
wii = ["ogc-sys/wii"]

[dependencies]
derive_more = "0.99"
fully-occupied = { path = "../../shared/fully-occupied" }
inception-render-common = { path = "../../shared/inception-render-common" }
libc = "0.2"
libm = "0.2"
ogc-sys = { path = "../ogc-sys", default-features = false }
paste = "1"
seq-macro = "0.2"
