[package]
name = "bsp-loader-gx"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bsp-loader-gx"
test = false
bench = false

[features]
default = ["gamecube", "dvd_loader"]

# One platform feature must be enabled. This means turning off default features to change it.
gamecube = ["ogc-sys/gamecube", "gamecube-dvd-driver/gamecube"]
wii = ["ogc-sys/wii", "gamecube-dvd-driver/wii"]

# One loader feature must be enabled. This means turning off default features to change it.
dvd_loader = [] # Shipping configuration. Must be run with a built disc image.
ftp_loader = [] # Debug configuration. Requires Broadband Adapter.
embedded_loader = [] # Debug configuration.


[dependencies]
aligned = "0.4"
bytemuck = "1"
derive_more = "0.99"
derive-try-from-primitive = "1"
font-gx = { path = "../font-gx" }
gamecube-dvd-driver = { path = "../gamecube-dvd-driver" }
gamecube-mmio = { path = "../gamecube-mmio" }
gamecube-peripheral-access = { path = "../gamecube-peripheral-access" }
gamecube-shader = { path = "../gamecube-shader" }
inception-render-common = { path = "../../shared/inception-render-common" }
include-bytes-align-as = { path = "../include-bytes-align-as" }
libc = "0.2"
libm = "0.2"
no-std-ftp = { path = "../../shared/no-std-ftp" }
no-std-io = { path = "../../shared/no-std-io" }
num-traits = { version = "0.2", default-features = false }
ogc-sys = { path = "../ogc-sys", default-features = false }
paste = "1"
seq-macro = "0.3"
