[package]
name = "font-gx"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamecube-shader = { path = "../gamecube-shader", default-features = false }
ogc-sys = { path = "../ogc-sys", default-features = false }
