[package]
name = "gamecube-dvd-driver"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
test = false
bench = false

[features]
gamecube = ["ogc-sys/gamecube"]
wii = ["ogc-sys/wii"]

[dependencies]
aligned = "0.4"
gamecube-cpu = { path = "../gamecube-cpu" }
gamecube-mmio = { path = "../gamecube-mmio" }
libc = "0.2"
mvbitfield = { path = "../../shared/mvbitfield" }
ogc-sys = { path = "../ogc-sys", default-features = false }
snafu = { version = "0.7", default-features = false }
