[package]
name = "gamecube-mmio"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[dependencies]
gamecube-cpu = { path = "../gamecube-cpu" }
memoffset = "0.8"
mvbitfield = { path = "../../shared/mvbitfield" }
paste = "1"
seq-macro = "0.3"
