[package]
name = "gamecube-video-driver"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
bench = false

[dependencies]
aligned = "0.4"
gamecube-mmio = { path = "../gamecube-mmio" }
mvbitfield = { path = "../../shared/mvbitfield" }
snafu = { version = "0.7", default-features = false }
