[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false

[dependencies]
array-const-fn-init = "0.1"
arrayvec = { version = "0.7", default-features = false }
gamecube-cpu = { path = "../gamecube-cpu" }
gamecube-mmio = { path = "../gamecube-mmio" }
gamecube-video-driver = { path = "../gamecube-video-driver" }
mvbitfield = { path = "../../shared/mvbitfield" }
panic-abort = "0.3"
