[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
array-const-fn-init = "0.1"
array-lit = { version = "0.2", default-features = false }
arrayvec = { version = "0.7", default-features = false }
gamecube-cpu = { path = "../gamecube-cpu" }
gamecube-mmio = { path = "../gamecube-mmio" }
gamecube-video-driver = { path = "../gamecube-video-driver" }
mvbitfield = { git = "https://github.com/mvanbem/mvbitfield" }
panic-abort = "0.3"
