[package]
name = "ogc-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for libogc targeting GameCube, for use with devkitPro."
license = "MIT"

[lib]
test = false
bench = false

[features]
default = ["gamecube"]
gamecube = []
wii = []

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.59"
