[package]
name = "bsp-loader-gl"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
glium = "0.32"
memmap = "0.7"
nalgebra-glm = "0.17"
nom = "7"
png = "0.17"
recursive-iter = { path = "../../shared/recursive-iter" }
source-reader = { path = "../../shared/source-reader", features = ["glium"] }
texture-atlas = { path = "../../shared/texture-atlas" }
texture-format = { path = "../../shared/texture-format" }
try-insert-ext = "0.1"
zip = "0.6"
