[package]
name = "inception-pack"
version = "0.1.0"
edition = "2021"
description = "Packs Source engine assets for use with Inception."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
clap = "2"
inception-render-common = { path = "../../shared/inception-render-common" }
memmap = "0.7"
nalgebra-glm = "0.15"
num-traits = "0.2"
paste = "1"
seq-macro = "0.2"
source-reader = { path = "../../shared/source-reader" }
texture-atlas = { path = "../../shared/texture-atlas" }
texture-format = { path = "../../shared/texture-format" }
try-insert-ext = "0.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
source-reader = { path = "../../shared/source-reader", features = ["quickcheck"] }
