[package]
name = "bitint"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
features = ["unchecked_math", "_nightly"]

[features]
unchecked_math = []
_nightly = []

[dependencies]
bitint-macros = { path = "../bitint-macros" }
num-traits = "0.2"
paste = "1"
seq-macro = "0.3"

[dev-dependencies]
trybuild = "1"
