[package]
name = "inception-render-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
std = ["byteorder", "relocation"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
byteorder = { version = "1", optional = true }
nalgebra-glm = { version = "0.17", default_features = false }
relocation = { path = "../relocation", optional = true }
