[package]
name = "mvbitfield"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
doc = []

[dependencies]
bitint = { path = "../bitint" }
mvbitfield-macros = { path = "../mvbitfield-macros" }
paste = "1"
seq-macro = "0.3"

[dev-dependencies]
trybuild = "1"
