[package]
name = "mvbitfield"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
features = ["doc", "_nightly"]

[features]
doc = []
_nightly = []

[dependencies]
bitint = { git = "https://github.com/mvanbem/bitint" }
mvbitfield-macros = { path = "../mvbitfield-macros" }
paste = "1"
seq-macro = "0.3"

[dev-dependencies]
trybuild = "1"
