[package]
name = "source-reader"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
fully-occupied = { path = "../fully-occupied" }
memmap = "0.7"
nalgebra-glm = "0.15"
nom = "7"
recursive-iter = { path = "../recursive-iter" }
texture-atlas = { path = "../texture-atlas" }
try-insert-ext = "0.1"
try_map = "0.3"
zip = "0.5"
