[package]
name = "texture-format"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
half = { version = "1", features = ["num-traits"] }
num-traits = "0.2"
stb_dxt = "0.1"
